// Copyright 2023 Intrinsic Innovation LLC
// Intrinsic Proprietary and Confidential
// Provided subject to written agreement between the parties.

syntax = "proto3";

package intrinsic_proto;

import "google/protobuf/any.proto";

message SafetyConfig {
  // Name of the safety device that provides the safety-related flatbuffers for
  // a particular part.
  string safety_device_name = 1;

  reserved 2;
}

message RealtimePartConfig {
  // Part type. Must match a part type that has been registered with
  // `GetGlobalRealtimePartFromProtoFactoryRegistry().RegisterTyped<ConfigProtoT>(...)`.
  // Where ConfigProtoT matches the expected type of `config`.
  string part_type_name = 1;
  // Part-specific configuration. This is passed as-is to the part's registered
  // factory function.
  google.protobuf.Any config = 3;
  // Default safety action while the part is enabled, but either
  // * A safety reaction is requested by the safety controller
  // * No user-invoked action is controlling the part
  //
  // Must match an action type that has been registered with
  // `GetGlobalRealtimeActionFactoryRegistry().Register(...)`.
  string safety_action_type_name = 4;
  // The optional safety configuration for this part.
  optional SafetyConfig safety_config = 5;

  reserved 2;
}
